[gd_scene load_steps=2 format=3 uid="uid://cqxvictory001"]

[ext_resource type="Script" path="res://game/scripts/battle/VictoryScreen.gd" id="1_script"]

[node name="VictoryScreen" type="CanvasLayer"]
layer = 20
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -60.0
offset_right = 80.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Victory!"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="XPLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "XP Gained: 0"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Gold: 0"
horizontal_alignment = 1

[node name="Separator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ItemsLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Items:"
horizontal_alignment = 1

[node name="ItemsContainer" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="Separator3" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Continue"
